--- a/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
@@ -14,7 +14,8 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:8c4dd21966739024fbd72155091d199e"
+        "GUID:8c4dd21966739024fbd72155091d199e",
+        "GUID:33661e06c33d31b4c9223810bf503247"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -102,9 +103,14 @@
           "define": "TOOLBOX_SCRIPTABLE_VALUES_2"
         },
         {
-          "name": "com.unity.mathematics",
-          "expression": "",
-          "define": "TOOLBOX_MATHEMATICS"
+            "name": "com.cysharp.zstring",
+            "expression": "",
+            "define": "TOOLBOX_ZSTRING"
+        },
+        {
+            "name": "com.unity.mathematics",
+            "expression": "",
+            "define": "TOOLBOX_MATHEMATICS"
         }
     ],
     "noEngineReferences": false
