--- a/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
+++ b/Packages/se.hertzole.unitytoolbox/Runtime/Hertzole.UnityToolbox.asmdef
@@ -15,7 +15,8 @@
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:8c4dd21966739024fbd72155091d199e",
-        "GUID:33661e06c33d31b4c9223810bf503247"
+        "GUID:33661e06c33d31b4c9223810bf503247",
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -116,6 +117,11 @@
             "name": "Unity",
             "expression": "6000.0",
             "define": "TOOLBOX_UXML_ATTRIBUTES"
+        },
+        {
+            "name": "com.unity.netcode.gameobjects",
+            "expression": "",
+            "define": "TOOLBOX_NETCODE_GO"
         }
     ],
     "noEngineReferences": false
